force-app/main/default/objects/FF_Feedback__c/FF_Feedback__c.object-meta.xml
<CustomObject>
    <label>FF Feedback</label>
    <nameField>
        <displayFormat>FB {0000}</displayFormat>
        <label>FF Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FF Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>