force-app/main/default/objects/FF_Feedback__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Completed by</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FF Feedback (Person Account))</relationshipLabel>
    <relationshipName>FF_Feedback1</relationshipName>
    <type>Lookup</type>
</CustomField>