force-app/main/default/objects/FF_Feedback__c/fields/ff_session_external_id__c.field-meta.xml
<CustomField>
    <fullName>ff_session_external_id__c</fullName>
    <label>FF session external ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>