force-app/main/default/objects/FF_Feedback__c/fields/How_clear_did_you_find_the_Questions__c.field-meta.xml
<CustomField>
    <fullName>How_clear_did_you_find_the_Questions__c</fullName>
    <label>How clear did you find the Questions?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>