force-app/main/default/objects/FF_Feedback__c/fields/Other_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Other_Feedback__c</fullName>
    <label>Other feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>